--- a/index1.html
+++ b/index1.html
@@ -15,7 +15,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./style.css">
 
   <!-- 
     - google font link
@@ -99,7 +99,7 @@
       <div class="container">
 
         <a href="#" class="logo">
-          <img src="./images/logo.png" alt="Homeverse logo">
+          <img src="./logo.png" alt="Homeverse logo">
         </a>
 
         <nav class="navbar" data-navbar>
@@ -107,7 +107,7 @@
           <div class="navbar-top">
 
             <a href="#" class="logo">
-              <img src="./images/logo.png" alt="Homeverse logo">
+              <img src="./logo.png" alt="Homeverse logo">
             </a>
 
             <button class="nav-close-btn" data-nav-close-btn aria-label="Close Menu">
@@ -214,7 +214,7 @@
           </div>
 
           <figure class="hero-banner">
-            <img src="./images/hero-banner.png" alt="Modern house model" class="w-100">
+            <img src="./hero-banner.png" alt="Modern house model" class="w-100">
           </figure>
 
         </div>
@@ -232,9 +232,9 @@
         <div class="container">
 
           <figure class="about-banner">
-            <img src="./images/about-banner-1.png" alt="House interior">
+            <img src="./about-banner-1.png" alt="House interior">
 
-            <img src="./images/about-banner-2.jpg" alt="House interior" class="abs-img">
+            <img src="./about-banner-2.jpg" alt="House interior" class="abs-img">
           </figure>
 
           <div class="about-content">
@@ -317,7 +317,7 @@
               <div class="service-card">
 
                 <div class="card-icon">
-                  <img src="./images/service-1.png" alt="Service icon">
+                  <img src="./service-1.png" alt="Service icon">
                 </div>
 
                 <h3 class="h3 card-title">
@@ -342,7 +342,7 @@
               <div class="service-card">
 
                 <div class="card-icon">
-                  <img src="./images/service-2.png" alt="Service icon">
+                  <img src="./service-2.png" alt="Service icon">
                 </div>
 
                 <h3 class="h3 card-title">
@@ -367,7 +367,7 @@
               <div class="service-card">
 
                 <div class="card-icon">
-                  <img src="./images/service-3.png" alt="Service icon">
+                  <img src="./service-3.png" alt="Service icon">
                 </div>
 
                 <h3 class="h3 card-title">
@@ -416,7 +416,7 @@
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./images/property-1.jpg" alt="New Apartment Nice View" class="w-100">
+                    <img src="./property-1.jpg" alt="New Apartment Nice View" class="w-100">
                   </a>
 
                   <div class="card-badge green">For Rent</div>
@@ -494,7 +494,7 @@
                   <div class="card-author">
 
                     <figure class="author-avatar">
-                      <img src="./images/author.jpg" alt="JM AGENT" class="w-100">
+                      <img src="./author.jpg" alt="JM AGENT" class="w-100">
                     </figure>
 
                     <div>
@@ -534,7 +534,7 @@
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./images/property-2.jpg" alt="Modern Apartments" class="w-100">
+                    <img src="./property-2.jpg" alt="Modern Apartments" class="w-100">
                   </a>
 
                   <div class="card-badge orange">For Sales</div>
@@ -612,7 +612,7 @@
                   <div class="card-author">
 
                     <figure class="author-avatar">
-                      <img src="./images/author.jpg" alt="JM AGENT" class="w-100">
+                      <img src="./author.jpg" alt="JM AGENT" class="w-100">
                     </figure>
 
                     <div>
@@ -652,7 +652,7 @@
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./images/property-3.jpg" alt="Comfortable Apartment" class="w-100">
+                    <img src="./property-3.jpg" alt="Comfortable Apartment" class="w-100">
                   </a>
 
                   <div class="card-badge green">For Rent</div>
@@ -730,7 +730,7 @@
                   <div class="card-author">
 
                     <figure class="author-avatar">
-                      <img src="./images/author.jpg" alt="JM AGENT" class="w-100">
+                      <img src="./author.jpg" alt="JM AGENT" class="w-100">
                     </figure>
 
                     <div>
@@ -770,7 +770,7 @@
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./images/property-4.png" alt="Luxury villa in Rego Park" class="w-100">
+                    <img src="./property-4.png" alt="Luxury villa in Rego Park" class="w-100">
                   </a>
 
                   <div class="card-badge green">For Rent</div>
@@ -848,7 +848,7 @@
                   <div class="card-author">
 
                     <figure class="author-avatar">
-                      <img src="./images/author.jpg" alt="JM AGENT" class="w-100">
+                      <img src="./author.jpg" alt="JM AGENT" class="w-100">
                     </figure>
 
                     <div>
@@ -1058,7 +1058,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner">
-                  <img src="./images/blog-1.png" alt="The Most Inspiring Interior Design Of 2021" class="w-100">
+                  <img src="./blog-1.png" alt="The Most Inspiring Interior Design Of 2021" class="w-100">
                 </figure>
 
                 <div class="blog-content">
@@ -1110,7 +1110,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner">
-                  <img src="./images/blog-2.jpg" alt="Recent Commercial Real Estate Transactions" class="w-100">
+                  <img src="./blog-2.jpg" alt="Recent Commercial Real Estate Transactions" class="w-100">
                 </figure>
 
                 <div class="blog-content">
@@ -1162,7 +1162,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner">
-                  <img src="./images/blog-3.jpg" alt="Renovating a Living Room? Experts Share Their Secrets"
+                  <img src="./blog-3.jpg" alt="Renovating a Living Room? Experts Share Their Secrets"
                     class="w-100">
                 </figure>
 
@@ -1263,7 +1263,7 @@
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="./images/logo-light.png" alt="Homeverse logo">
+            <img src="./logo-light.png" alt="Homeverse logo">
           </a>
 
           <p class="section-text">
@@ -1450,7 +1450,7 @@
   <!-- 
     - custom js link
   -->
-  <script src="./js/script.js"></script>
+  <script src="./script.js"></script>
 
   <!-- 
     - ionicon link
